--- a/style.css
+++ b/style.css
@@ -23,4 +23,45 @@ body
 #status , #start
 {
     font-size: 22px;
+    border-radius: 10px;
+    font-size: 22px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#restart-button
+{
+    margin-bottom: 10px;
+    border-radius: 10px;
+    font-size: 22px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.modal-dialog
+{
+    width: 90%;
+}
+
+h4
+{
+    font-size: 24px;
+    background-color: lightseagreen;
+    line-height: 2;
+    margin: 0px;
+}
+
+.Instruction_image
+{
+   display: inline-block;
+   width: 45%;
+}
+
+.copy_right_footer
+{
+    position: fixed;
+    color: white;
+    width: 100%;
+    bottom: 0;
+    line-height: 3;
+    text-align: center;
+    background-color: grey;
 }
